editing CI2024 blog post

--- a/_posts/2024-04-29-CI2024-meeting.md
+++ b/_posts/2024-04-29-CI2024-meeting.md
@@ -1,19 +1,18 @@
 ---
 title: Climate Informatics 2024
 date: 2024-04-28
-description: 
+description: Conference at the Alan Turing Institute
 categories:
   - conferences
-  - workshops
-image: /images/blogcover2.jpg
+image: /images/rice-drone.jpg
 author_staff_member: dualta
-excerpt: The team virtually presented work at the Turing Institute showing our recent results on quantifying climate adaptation in irrigation intervention work
+excerpt: The team virtually presented work at the Alan Turing Institute showing our recent results on quantifying climate adaptation in irrigation intervention work
 ---
 
 
-## Climate Informatics 2024 hosted by the Turing Institute
+## Climate Informatics 2024 hosted by the Alan Turing Institute
 
-The team virtually attended this 3-day meeting based in London, hosted by the Turing Institute. 
+The team virtually attended this 3-day meeting based in London, hosted by the Alan Turing Institute. 
 
 Our work that was communicated to other researchers and journalists attending the event included how to quantify the effect of interventions on agricultural production. 
 
@@ -26,11 +25,11 @@ This offers a low-cost solution to stakeholders, NGOs, and governmental organisa
 <div class="pdf-container">
 <object data="/images/Climate_Informatics_v1.pdf" 
         type="application/pdf" 
-        width="900" 
-        height="1200">
+        width="1200" 
+        height="900">
     <iframe src="/images/Climate_Informatics_v1.pdf" 
-            width="900" 
-            height="1200">
+            width="1200" 
+            height="900">
             This browser does not support PDFs. Please download the PDF to view it: <a href="/images/Climate_Informatics_v1.pdf">Download PDF</a>.
     </iframe>
 </object>
