add EI representatives to ADB blog post

--- a/_posts/2024-09-30-ADBCork.md
+++ b/_posts/2024-09-30-ADBCork.md
@@ -11,7 +11,7 @@ excerpt: Members from the TAPAS team attended a meeting between University Colle
 ---
 ## TAPAS team meeting with the Asian Development Bank in University College Cork
 
-On Friday September 20th, members from the TAPAS team attended a meeting between University College Cork (UCC) and University of Galway representatives of the Irish Forum for International Agricultural Development (IFIAD), members of the Asian Development Bank (ADB), and government delegates from Cambodia, Mongolia, and Vietnam. The meeting was held in the Council Room in UCC and was themed “Transforming Food Systems for Food and Nutrition Security in the Asia/Pacific Region”. 
+On Friday September 20th, members from the TAPAS team attended a meeting between University College Cork (UCC) and University of Galway representatives of the Irish Forum for International Agricultural Development (IFIAD), members of the Asian Development Bank (ADB), and government delegates from Cambodia, Mongolia, and Vietnam. Enterprise Ireland were represented by Kevin Ryan and Thuy Anh. The meeting was held in the Council Room in UCC and was themed “Transforming Food Systems for Food and Nutrition Security in the Asia/Pacific Region”. 
 
 We were given an overview of the ADB's work in developing Asia and the Pacific, and its relationship with Ireland by Michiko Suga. Robert Schoellhammer outlined the knowledge program within ADB and gave examples of partnerships between the ADB and universities around the world. Takeshi Ueda presented the current status of ADB operations in the agriculture, food, nature and rural development sectors. We then heard from the government delegates; Seng Tuy from Cambodia, Anar Enkhbold from Mongolia, and Nguyen Thanh Dam from Vietnam. They each outlined the key investment needs of the agriculture sectors in their respective countries. 
 
